turtleart.house.House.scala.error
Compilation error:
House:2: error: not found: value drawSquart
  drawSquart(100);
  ^